# hmtest

./: .gitignore  CMakeLists.txt  hmtest.sln  readme.md  shaders_to_add.txt
hmtest/: Angle.cc  Angle.cpp  Angle.hpp  CMakeLists.txt  Quat.cc  Quat.cpp  Quat.hpp  angle.cc  angle.h  hmmath.cc  hmmath.h  hmtest.vcproj  level.an8  level_hi.mtl  main.cc  main.cpp  math.cc  math.cpp  math.h  math.hpp  quat.cc  quat.h  shaders.txt  vec2.cc  vec2.cpp  vec2.h  vec2.hpp  vec3.cc  vec3.cpp  vec3.h  vec3.hpp  vecop.hpp
hmtest/shaders/: light_point.frag  light_point.vert  light_spot.frag  simple.vert
src/: CMakeLists.txt
src/hm/: angle.cc  assert.h  dep_gl.h  dep_sdl.h  engine.cc  engine.h  gridrender.cc  gridrender.h  image.cc  image.h  imagedescription.cc  imagedescription.h  light.cc  light.h  loadedimage.cc  loadedimage.h  loading.cc  loading.h  main.cc  material.cc  material.h  math.cc  math.h  media.cc  media.h  mesh.cc  mesh.h  opengl.cc  opengl.h  quat.cc  quat.h  shader.cc  shader.h  state.cc  state.h  statemanager.cc  statemanager.h  templatemedia.h  texturerenderer.copy.cc  texturerenderer.copy.h  (+14 more)
